--- a/Assets/sass/index.scss
+++ b/Assets/sass/index.scss
@@ -9,5 +9,6 @@
 
 @import './components/bouton.scss';
 @import './components/coeur.scss';
+@import './components/listitem.scss';
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap');
