--- a/Assets/sass/utils/_variables.scss
+++ b/Assets/sass/utils/_variables.scss
@@ -12,3 +12,6 @@ $gris-clair: #e2e2e2;
 $txt-fond-clair: #000000;
 $txt-fond-sombre: #ffffff;
 $txt-fond-vert: #008766;
+
+$responsive-tablette: "768px";
+$responsive-desktop: "1236px";
