--- a/Assets/css/index.css
+++ b/Assets/css/index.css
@@ -1,4 +1,32 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap");
+@keyframes lds-facebook {
+  0% {
+    top: 8px;
+    height: 64px;
+  }
+  50%, 100% {
+    top: 24px;
+    height: 32px;
+  }
+}
+@keyframes loaderdisparition {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+@keyframes apparitionlist {
+  0% {
+    transform: translateY(2em);
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 main .MenuResto .btn, main .MenuResto, main .SectionFonct, main .SectionTop, main .SectionSearch, header {
   display: grid;
   align-items: center;
@@ -67,7 +95,7 @@ main .SectionFonct {
   }
 }
 main .SectionFonct h2 {
-  padding: 2em 0;
+  padding: 1em 0;
 }
 main .SectionFonct ul {
   display: grid;
@@ -125,11 +153,15 @@ main .SectionResto {
     padding: 1em 10rem;
   }
 }
+main .SectionResto h2 {
+  padding: 1rem;
+}
 main .SectionResto ul {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 2em;
   padding-top: 3em;
+  padding: 1rem;
 }
 @media screen and (min-width: 768px) {
   main .SectionResto ul {
@@ -188,7 +220,6 @@ main .SectionResto ul li .cardInfo .cardFav {
 main .MenuResto {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  padding: 0 0 3em;
   background-color: #f6f6f6;
 }
 @media screen and (min-width: 768px) {
@@ -208,7 +239,7 @@ main .MenuResto__img {
   object-fit: cover;
 }
 main .MenuResto__menu {
-  padding: 2em 1em 0;
+  padding: 2em 1em;
   border-radius: 3em 3em 0 0;
   background-color: #e2e2e2;
 }
@@ -230,6 +261,7 @@ main .MenuResto h2 {
   justify-content: center;
   font-family: "Shrikhand", cursive;
   position: relative;
+  padding: 0 0 0 1rem;
 }
 main .MenuResto h2 i {
   padding-left: 1em;
@@ -249,6 +281,20 @@ main .MenuResto ul li {
   margin: 1em 0;
   position: relative;
   overflow: hidden;
+}
+main .MenuResto ul li h4 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  transition: all 0.5s;
+  width: 80%;
+}
+main .MenuResto ul li p {
+  width: 80%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  transition: all 0.5s;
 }
 main .MenuResto ul li strong {
   position: absolute;
@@ -274,8 +320,65 @@ main .MenuResto ul li span .fa-check-circle {
   transform: rotate(-360deg);
   transition: all 0.5s;
 }
+main .MenuResto ul .list-item {
+  opacity: 0;
+  animation: apparitionlist 1000ms forwards;
+}
+main .MenuResto ul .list-item--1 {
+  animation-delay: 200ms;
+}
+main .MenuResto ul .list-item--2 {
+  animation-delay: 400ms;
+}
+main .MenuResto ul .list-item--3 {
+  animation-delay: 600ms;
+}
+main .MenuResto ul .list-item--4 {
+  animation-delay: 800ms;
+}
+main .MenuResto ul .list-item--5 {
+  animation-delay: 1000ms;
+}
+main .MenuResto ul .list-item--6 {
+  animation-delay: 1200ms;
+}
+main .MenuResto ul .list-item--7 {
+  animation-delay: 1400ms;
+}
+main .MenuResto ul .list-item--8 {
+  animation-delay: 1600ms;
+}
+main .MenuResto ul .list-item--9 {
+  animation-delay: 1800ms;
+}
 main .MenuResto ul li:hover {
   transition: all 0.5s;
+}
+main .MenuResto ul li:hover h4 {
+  width: 60%;
+}
+@media screen and (min-width: 768px) {
+  main .MenuResto ul li:hover h4 {
+    width: 70%;
+  }
+}
+@media screen and (min-width: 1236px) {
+  main .MenuResto ul li:hover h4 {
+    width: 90%;
+  }
+}
+main .MenuResto ul li:hover p {
+  width: 60%;
+}
+@media screen and (min-width: 768px) {
+  main .MenuResto ul li:hover p {
+    width: 70%;
+  }
+}
+@media screen and (min-width: 1236px) {
+  main .MenuResto ul li:hover p {
+    width: 90%;
+  }
 }
 main .MenuResto ul li:hover strong {
   transition: 0.5s;
@@ -317,6 +420,9 @@ footer .SectionFooter ul li {
 }
 footer .SectionFooter ul li i {
   padding: 0 1em 0 0;
+}
+footer .SectionFooter ul li a {
+  color: white;
 }
 @media screen and (min-width: 768px) {
   footer .SectionFooter {
@@ -396,4 +502,45 @@ footer .SectionFooter ul li i {
   text-align: left;
   border-radius: 1em;
   box-shadow: 0 4px 11px rgba(0, 0, 0, 0.2);
+}
+
+.loader {
+  display: flex;
+  position: fixed;
+  z-index: 1111;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: #dbdbdb;
+  animation: 1s loaderdisparition 3000ms ease forwards;
+}
+.loader .lds-facebook {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.loader .lds-facebook div {
+  display: inline-block;
+  position: absolute;
+  left: 8px;
+  width: 16px;
+  background: #dfc;
+  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+}
+.loader .lds-facebook div:nth-child(1) {
+  left: 8px;
+  animation-delay: -0.24s;
+  background: #9356DC;
+}
+.loader .lds-facebook div:nth-child(2) {
+  left: 32px;
+  animation-delay: -0.12s;
+  background: #FF79DA;
+}
+.loader .lds-facebook div:nth-child(3) {
+  left: 56px;
+  animation-delay: 0;
+  background: #99E2D0;
 }
