--- a/Assets/sass/index.scss
+++ b/Assets/sass/index.scss
@@ -10,5 +10,6 @@
 @import './components/bouton.scss';
 @import './components/coeur.scss';
 @import './components/listitem.scss';
+@import './components/loader.scss';
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap');
