--- a/Assets/sass/layout/footer.scss
+++ b/Assets/sass/layout/footer.scss
@@ -21,8 +21,12 @@ footer {
             & li {
                 padding: 0 0 0.3rem 0;
 
-                i {
+                & i {
                     padding: 0 1em 0 0;
+                }
+
+                & a {
+                    color: white;
                 }
             }
         }
